--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="manifest" href="manifest.json"> -->
+   <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/menu.css">
@@ -337,6 +337,17 @@
         </div>
         </div>
     </div>
+    <script>
+        if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register("sw.js")
+        .then(function(registration) {
+    // Worker is registered   
+    }).catch(function(error) {
+    // There was an error registering the SW 
+    });     
+}
+
+    </script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="js/menu.js"></script> 
 <!-- <script src="/sw.js"></script> -->
